[gd_scene load_steps=2 format=3 uid="uid://br13jjyg6c1y6"]

[ext_resource type="Script" path="res://addons/smm/gui/popups/action/add_action_assignment_popup_panel.gd" id="1_r7qdg"]

[node name="AddActionAssignmentPopupPanel" type="PopupPanel"]
title = "Add Variable"
position = Vector2i(510, 300)
size = Vector2i(320, 220)
visible = true
borderless = false
script = ExtResource("1_r7qdg")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 4.0
offset_right = 316.0
offset_bottom = 216.0
grow_horizontal = 2
grow_vertical = 2

[node name="GridContainer" type="GridContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 2
columns = 2

[node name="VarLabel" type="Label" parent="VBoxContainer/GridContainer"]
layout_mode = 2
text = "Assign to:"
horizontal_alignment = 2

[node name="VariableNameField" type="LineEdit" parent="VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
placeholder_text = "variable name..."

[node name="FunctionLabel" type="Label" parent="VBoxContainer/GridContainer"]
layout_mode = 2
text = "from:"
horizontal_alignment = 2

[node name="FunctionNameField" type="LineEdit" parent="VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
placeholder_text = "function name..."

[node name="ArgumentLabel" type="Label" parent="VBoxContainer/GridContainer"]
layout_mode = 2
text = "arguments:"

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="AddArgumentMenuButton" type="MenuButton" parent="VBoxContainer/GridContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Add argument..."

[node name="ArgumentList" type="ItemList" parent="VBoxContainer/GridContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 2
allow_search = false
auto_height = true

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8

[node name="AddButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Add"

[node name="CancelButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Cancel"

[connection signal="pressed" from="VBoxContainer/HBoxContainer/AddButton" to="." method="_on_add_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/CancelButton" to="." method="_on_cancel_button_pressed"]
